# infra

./: .gitignore  README.md  revision
ansible/: build-image.yml  provision-ec2.yml
ansible/group_vars/: all
ansible/test/: Dockerfile
aws/: provision  ssm-param
aws/dyndns/: deploy  dyndns.py
aws/instance/: availability-zone
container-images/backupjob/: build
deploy/: README.md  pulumi.py  pyproject.toml
deploy/infralib/: __init__.py  context.py  project.py
deploy/infralib/config/: __init__.py  aws.py  config.py  gcp.py
deploy/infralib/context/: __init__.py  context.py  environment.py
deploy/infralib/deployment/: __init__.py  project.py  stack.py  target.py
deploy/infralib/pulumi/: __init__.py  name.py  program.py
deploy/util/: precommit
packer/: build  delete-ami  syncthing.json
packer/conf/: global.conf  syncthing.conf
srvtools/ansible/: README.md  Vagrantfile  ansible-playbook-vagrant  ansible.cfg  deploy-srvtools.yml  hosts  provision-ec2.yml  requirements.txt  router-provision.yml  server-build.yml  server-provision.yml  server-setup.yml
srvtools/aws/: provision  ssm-param
srvtools/pyinfra/: build_server.py  inventory.py  mypy.ini  provision_server.py  requirements.txt
terraform/common/: common-env.tf
terraform/remote-states/: remote-state-air-quality.tf  remote-state-backup-persistent.tf
terragrunt/: mise.toml  root.hcl
terragrunt/common/: aws_env_common.hcl  aws_provider.tf.tftpl  common_provider.tf  common_vars.tf  google_provider.tf.tftpl  provider.tf  provider.tf.tftpl
terragrunt/util/: unit
test/syncthing/: test  (+1 more)
(+551 files in other folders)
